# python-devcontainer-template

./: README.md  setup.cfg
.devcontainer/: devcontainer.json
